--- a/assets/style.css
+++ b/assets/style.css
@@ -45,7 +45,12 @@ h3 {
 form {
     border: #D3D3D3 solid 3px;
     padding: 10px;
+    margin-top: 20px;
 }
 button {
     padding: 6px;
+}
+h2 {
+    border-bottom: #D3D3D3 solid 3px;
+    padding-bottom: 10px;
 }
