--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@
     margin-right: 140px;
 }
 
+
 /*Navigation Bar Styling*/
 .ml-auto {
     margin-left: auto !important
@@ -23,6 +24,7 @@
     border-bottom: 2.5px solid #D3D3D3;
     padding-top: 0px;
 }
+
 
 /*About Me Card Styling*/
 .about-me {
@@ -109,8 +111,43 @@ h2 {
 }
 
 .portfolioTitle {
-    border: none;
-    border-bottom: #D3D3D3 5px solid;
     padding: 15px
-
+    
 }
+
+hr {
+    border: #D3D3D3 solid 1.5px;
+}
+
+    
+
+
+@media only screen and (max-width: 640px) {
+    /* For mobile phones: */
+ 
+    #navbarSupportedContent {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap-reverse;
+        justify-content: flex-start;
+    }
+
+    .navbar {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 100%;
+        justify-content: flex-start;
+
+    }
+    .navbar-nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        }
+    .navbar-nav .nav-link {
+        padding-right: 5px;
+        padding-left: 5px;
+        
+    
+  }
