updated to include exploreCascadia.html

--- a/assets/style.css
+++ b/assets/style.css
@@ -140,6 +140,11 @@ h6 {
     padding: 4px;
 }
 
+/*Explore Cascadia */
+.ExploreCascadia {
+    padding-left: 200px;
+    color: #b76e79;
+}
 
 
     
